--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap');
 
+@media screen and (max-width: 600px){
+
+}
+@media screen and (max-width:600px){
+	.cabecalho-link{
+		width: 60%;
+		padding: 0;
+		
+	
+
+
+	}
+}
+@media screen and (max-width:600px){
+	.container-text{
+		width: 59%;
+		padding-top: 30px;
+	}
+}
+@media screen and (max-width:600px){
+	.redes-sociais{
+		width: 40px;
+	}
+}
 
 *{
 	margin: 0;
