--- a/estilo.css
+++ b/estilo.css
@@ -1,29 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap');
 
-@media screen and (max-width: 600px){
-
-}
-@media screen and (max-width:600px){
-	.cabecalho-link{
-		width: 60%;
-		padding: 0;
-		
-	
-
-
-	}
-}
-@media screen and (max-width:600px){
-	.container-text{
-		width: 59%;
-		padding-top: 30px;
-	}
-}
-@media screen and (max-width:600px){
-	.redes-sociais{
-		width: 40px;
-	}
-}
+  
+  @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap');
 
 *{
 	margin: 0;
@@ -31,99 +8,126 @@
 	box-sizing: border-box;
 	text-decoration: none;
 	list-style: none;
-	font-family:"poppins", sans-serif;
-
-}
-body{
-	overflow: hidden;
-}
-
-.background {
-	background: linear-gradient(rgba(8, 20, 0, 0.90),rgba(0, 0, 0, 0.5));
-	background-size: cover;
-	background-position: center;
-	width: 100%;
-	height: 100vh;
-
-}
- 
- header{
- 	display: flex;
- 	justify-content:space-around;
- 	max-width: 100%;
- 	align-items: center;
- 	text-align: center;
- 	padding-top: 1rem;
-
- }
-
- .cabecalho-link{
- 	display:flex;
- 	gap: 3rem;
- 	font-weight: 300;
- 	cursor: pointer;
- }
- .cabecalho-link a {
- 	color: white;
- 	font-size: 12px;
-
- }
- .cabecalho-link a:hover{
- 	color: #2ecc71;
- 	transition: 0.3 all;
- }
- .logo{
- 	height: 40px;
- 	width: 40px;
- 	background: transparent;
- 	border: 1px solid #2ecc71;
- 	color:#2ecc71 ;
- 	border-radius: 50px;
- 	display: inline-flex;
- 	align-items: center;
- 	justify-content: center;
- 	font-size: 13px;
- 	cursor: pointer;
- }
-button{
-	color:#2ecc71;
-	background: transparent;
-	border: solid 1px #2ecc71;
-	padding: 5px;
-	border-radius: 15px;
-	font-size: 12px;
-	width: 150px;
-	cursor: pointer;
-}
-button:hover{
-	background:#2ecc71 ;
-	color: white;
-	transition: 0.5s;
-}
-
-
-.container-text{
-	padding: 150px 0 0 130px
-
-}
-	
-span{
-	color:#2ecc71 ;
-}
-.redes-sociais{
-	margin-top: 10px;
-	padding:5px 130px  50px;
-
-}
-.redes-sociais a{
-	color:#2ecc71 ;
-	font-size: 20px;
-	padding:9px
-}
-.redes-sociais a:hover{
-	background:#2ecc71 ;
-	color: white;
-	transition: 0.5s;
-}
+	font-family:"Oxanium",cursive;
+	}
 
 	
+
+	body{
+		
+		font-family: "Oxanium"cursive;
+		color:white;
+		background-color: black;
+
+	}
+
+	body::before{
+		content: ;
+		background-image: url(../imagens/bg-desktop.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		z-index: -1;
+
+	}
+	.cabecalho{
+		display: flex;
+		justify-content: center;
+	}
+	.selecao-de-personagens{
+		display: flex;
+		align-items: center;
+		gap: 30px;
+		min-height: calc(100vh - 152px);
+		justify-content: center;
+
+	}
+	.selecao-de-personagens .lista-de-personagens{
+		display:flex;
+		flex-wrap: wrap;
+		gap: 30px;
+		justify-content: center;
+
+
+
+	}
+	.selecao-de-personagens .personagens{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-transform:uppercase ;
+		max-width: 585px;
+		gap: 25px;
+	}
+	.selecao-de-personagens .personagens .titulo{
+		font-size: 20px;
+		letter-spacing: 0.4px;
+		text-transform: uppercase;
+		border-bottom: 3px solid #47f4ff;
+		width: 100%;
+		text-align: center;
+
+	}
+	.lista-de-personagens .perssonagem .titulo{
+		width: 100%;
+		height: 100%;
+	}
+	.lista-de-personagens .perssonagem.selecionado{
+		box-shadow: 0px 0px 24px 5px #0271f7;
+	}
+	.personagem-selecionado {
+		text-align: center;
+		max-width: 530px;
+	}
+	.personagem-selecionado .personagem-grande{
+		width: 430px;
+		height: 430px;
+
+	}
+	.personagem-selecionado .nome-personagem{
+		border-bottom: 2px solid #47f4ff;
+		letter-spacing: 4px;
+		text-transform: uppercase;
+
+	}
+	.personagem-selecionado .descricao-do-personagem{
+		font-size: 16px;
+		line-height: 22px;
+		text-align: center;
+		margin-top: 20px;
+		width: 420px;
+
+	}
+
+	.cabecalho .logo{
+
+		max-width:190px;
+	}
+
+	.selecao-de-personagens{
+		flex-direction: column-reverse;
+		max-width: 430px;
+		margin: 0 auto;
+	}
+	.selecao-de-personagens .personagens{
+		margin-top: 37px;
+	}
+	.selecao-de-personagens{
+		width:400px ;
+	}
+	.personagem-selecionado .personagem-grande{
+		width: 300px;
+		height: 300px;
+
+	}
+	.informacoes-do-personagem .descricao-do-personagem{
+		font-size: 17px;
+	}
+	.perssonagem{
+		width: 110px;
+		
+	}
+
+
